# host-pms-processor

./: .env.example  .gitignore  CONECTOR_PADRAO_CLIMBER.md  Dockerfile  README.md  TESTING_GET_INTEGRATION.md  pyproject.toml  requirements.txt
.cursor/: conector-climber-padrao.mdc
src/: __init__.py  main.py
src/aws/: __init__.py  client_factory.py  mock_s3_manager.py  mock_sqs_manager.py  s3_manager.py  sqs_manager.py
src/clients/: __init__.py  esb_client.py  esb_padrao_client.py  host_api_client.py  mock_esb_client.py  redis_token_manager.py
src/config/: __init__.py  logging.py  settings.py
src/models/: _normalizers.py  reservation_status.py
src/models/climber/: __init__.py  config.py  inventory.py  reservation.py  segment.py
src/models/host/: __init__.py  config.py  inventory.py  reservation.py  stat_daily.py  stat_summary.py
src/services/: __init__.py  climber_padrao_orchestrator.py  orchestration_service.py
src/services/pipeline/: __init__.py  base_step.py  context.py  pipeline.py
src/services/pipeline/steps/: __init__.py  deprecated_process_reservations_step.py  fetch_parameters_step.py  process_config_step.py  process_inventory_grid_step.py  process_inventory_step.py  (+5 more)
src/transformers/: __init__.py  config_transformer.py  inventory_grid_transformer.py  reservation_transformer.py  segment_transformer.py  stat_daily_to_reservation_transformer.py  stat_daily_transformer.py  stat_summary_transformer.py
src/utils/: date_calculator.py  id_encoder.py  rate_limiter.py
tests/: README_LOCAL_TESTING.md  README_REAL_ESB_TESTING.md  check_esb_config.py  conftest.py  example_manual_test.py  fetch_and_transform_local.py  local_fetch_parameters_step.py  local_test_orchestrator.py  test_etl_flow_with_fixtures.py  test_get_integration.py  test_id_encoder.py  test_integration.py  test_local_run.py  test_stat_daily_consolidation.py  test_transformers.py
tests/db/: README.md  USAGE.md  __init__.py  db_utils.py  execute_stat_daily_sql.py  postgres_importer.py  setup_hotel_schema.py  sql_generator.py  stat_daily_importer.py  stat_daily_sql_generator.py  stat_summary_importer.py
tests/scripts/: import_reservations.py  import_stat_daily.py
